# My-note.

./: .gitignore  .gitmodules  AutoHotkey 语法总结.md  HinYeung机器人插件开发demo01.md  LICENSE  Mysdk.md  README.md  git-pull.sh  git-push.sh  git-update-submodules.sh  git-upload-submodules.sh  个人技术栈.md  自己总是忘记的汉字拼音.md  计算机常识.md
 Linux/: Linux下tar解压压缩文件命令的使用.md  Linux下打包成deb包.md  Linux下打包成tar包.md  Linux修改环境变量.md  Linux如何查看文件或文件夹的大小.md  Linux如何编写shell脚本.md  Linux常用命令.md  Linux更换软件源.md  Linux的安装.md  Linux系统的安装.md  Linux终端显示中文乱码.md  Linux解压缩zip文件.md  Linux设置远程登陆提示语.md  Linux配置开发环境如何提高可复制性.md  WSL（win10 subsystem for Linux）的使用.md  WSL（win10 subsystem for Linux）的安装.md  如何在Linux系统上将不同编码的文件转换为uft-8.md
00 数据库/: readme.md
01 Tools/: Readme.md  打包工具使用总结.md
01 Tools/Doxygen/cmake/: CMakeLists.txt  如何在cmake里编译Doxygen.md
02 OperationSystem操作系统/: 如何在x86电脑上安装aarch64Linux系统镜像.md
04 Script/: Readme.md
Android 安卓/: Android Studio build报错.md  Android Studio build窗口乱码.md  Android Studio使用C++开发App.md  Android Studio使用技巧.md  Android studio Github 插件使用问题.md  Android studio开发工程使用Git同步的相关问题.md  Android 四大布局.md  android studil开发 app包版本冲突问题.md  android studio开发 app包版本冲突问题.md  【实战项目】多功能计算器的实现.md
AppleDevelopment/: README.md
AutoHotKey/: AutoHotkey 语法总结.md  usual.ahk
C/: C语言易错点01 运算符与表达式.md  【C语言】stdlib库函数.md  【C语言】动态分配内存.md  【C语言】文件输入输出.md
C++/: C++ Lambda表达式.md  C++ STL 容器.md  C++ assert的用法.md  C++ char指针与string如何相互转换.md  C++ template的定义与使用.md  C++ 使用string类型的注意事项.md  C++ 关键字总结.md  C++ 其它基本类型转char.md  C++ 如何用宏来控制编译.md  C++ 如何获取文件的扩展名和不带扩展名的文件名.md  C++ 如何获取文件目录的最后一级.md  C++ 如何读取json.md  C++ 文件输入输出.md  C++ 计时函数.md  C++_多线程.md  C++二进制数的处理.md  C++可变参数函数.md  C++回调函数.md  C++多线程开发.md  C++如何创建进程.md  C++如何实现一个自删除程序.md  C++如何对数据库进行操作.md  C++如何操控word.md  C++如何获取变量类型.md  C++如何获取日期.md  C++如何获取系统磁盘容量.md  C++库文件的生成.md  C++强制类型转换符.md  C++模板类的定义与使用.md  C++的RAII原则和机制.md  C++的位运算符.md  C++的命名要求(C++ named requirements).md  C++的继承与多态.md  C++类的使用.md  C++里的宏指令.md  C++里的异常处理机制.md  C-C++ 数据类型.md  Cmake的语法.md  Const关键字的用法.md  Cpp如何使用宏来区别程序运行的操作系统.md  (+11 more)
CMake/: CMakeLists如何打开调试设置.md  CMakeLists如何调试boost.md  Cmake如何将生成的文件复制到指定的路径下.md  Cmake如何调用环境变量.md  Cmake常用指令.md  Cmake常用的预定义宏.md  Cmake的内置变量.md  README.md  Ubuntu 18.04安装新版的Cmake.md  使用Cmake check_cxx_source_compiles命令.md  使用Cmake make.md  值得学习的CMakelist.md  如何使用Cmake导入grpc.md  如何使用Cmake来编译项目.md  如何使用Cmake编译doxygen.md  如何使用一个CMakeLists编译win和Linux项目.md  如何在CMakeLists里使用foreach循环.md  如何在Cmake中使用find_package导入自己的的动态库.md  如何在Cmake里面添加单元测试.md
CMake/HYDeviceSDK/: CMakeLists.txt  HYDeviceSDKConfig.cmake
CSharp/: CSharp创建类型.md  CSharp创建自定义类型.md  CSharp多线程编程.md  CSharp如何对 JSON 进行序列化和反序列化（封送和拆收）.md  CSharp如何调用C++.md  CSharp如何调用DLL.md  CSharp编程术语.md  README.md  在CSharp中定义并使用枚举变量.md
Cmake/: Cmake如何使用宏区分不同的操作系统.md  Cmake常用指令.md  Cmake常用的预定义宏.md  README.md  Ubuntu 18.04安装新版的Cmake.md  使用Cmake check_cxx_source_compiles命令.md  使用Cmake make.md  如何使用Cmake导入grpc.md  如何使用Cmake来编译项目.md  如何使用Cmake编译doxygen.md  如何使用一个CMakeLists编译win和Linux项目.md  如何在Cmake中使用find_package导入自己的的动态库.md  如何在Cmake里面添加内存检测.md  如何在Cmake里面添加单元测试.md
Cmake/HYDeviceDemo/: CMakeLists.txt  HYDeviceDemo.cpp  找不到符号.md
Cmake/HYDeviceSDK/: CMakeLists.txt  HYDeviceSDKConfig.cmake
Cmake/code/robotplugin-hrl/: CMakeLists.txt
Colcon/: Colcon-Build命令详解.md  readme.md
DesignPattern(设计模式)/: .gitmodules  合成复用原则实例——网约车司机开车.md  开闭原则实例——计算器.md
DesignPattern(设计模式)/01创建型模式/0102抽象工厂模式/code/: AbstractFactory.hpp  AbstractFactoryPattern.h  AbstractFruit.hpp  CMakeLists.txt  RealFruit.hpp  main.cpp  rebuild.sh
Docker/: Docker容器的使用记录.md  Docker的run命令详解.md  Docker的基本使用.md  Docker的安装.md  README.md
Doxygen/: Doxyfile的注释.md  (+8 more)
工作相关/: CMakeLists.txt  HYSDK代码分析.md  使用工业相机进行检测.md  关于J6旋转角度的讨论.md  基于Linux的HYDeviceSDK 3D相机软件开发.md  慧灵电爪的接线方法.md  机器人插件命令行测试代码分析.md  机器人插件是如何触发拍照的.md  模拟机器人控制系统.md  自动手眼标定程序.md  螺丝M公制尺寸.md
工作相关/Aubo傲博机器人/: Aubo（傲博）机器人插件分析.md
工作相关/Aubo傲博机器人/Aubo傲博机器人网络连接/: Aubo傲博机器人网络连接.md
工作相关/Borunte伯朗特机器人/: BorunteRobot使用教程.md  【无序抓取】勃朗特机器人-气爪-HYpick 总结.md  【无序抓取】勃朗特机器人-电爪-HYpick 总结.md  伯朗特机器人插件分析.md  伯朗特机器人通信协议.md  摸索如何限制伯朗特机器人的J6关节的旋转角度.md
工作相关/HYDeviceSDK/: HYDeviceDemo的编译运行.md  HYDeviceSDK的CMakeLists.txt.md  HyDeviceSDK 代码分析.md  hydevicesdk依赖列表.md  编写HYDeviceSDK的CSharpAPI库.md
工作相关/HYDeviceSDK-CSharp/: README.md
工作相关/HYDeviceSDK/HYDeviceSDK编译及使用/: HYDeviceSDK的使用.md  HYDeviceSDK的编译运行.md  HYDeviceSDK的编译运行_.md
工作相关/HYDeviceSDK/boost-test/: boost-test测试问题.md
工作相关/HYDeviceSDK/code/include/: HYDeviceSDK.h  HYSensorClient.h  HYWebSocketClient.h
工作相关/HYDeviceSDK/code/src/: HYSensorClient.cpp  HYWebSocketClient.cpp
工作相关/HYDeviceSDK/在编译HYDeviceDemo可执行文件的时候遇到奇怪的问题/: 在编译HYDeviceDemo可执行文件的时候遇到奇怪的问题.md
工作相关/HYDeviceSDK/测试日志/: HYDeviceDemo可执行文件测试日志.md  gRPC回显gdb调试信息.md
工作相关/HYPluginDemo/: .gitignore  HRL-Plugin.sln  HYSDK_Release_X64.props  OPENCV_Release_X64.props  PCL_Release_X64.props
工作相关/HYPluginDemo/HRL-Plugin/: .gitignore  AlgorithmDemo.cpp  AlgorithmDemo.h  HRL-Plugin.cpp  HRL-Plugin.vcxproj  HRL-Plugin.vcxproj.filters
工作相关/HYSDK的使用/: LCCP的使用.md
工作相关/HYpick无序抓取总结/: HYpick无序抓取 经验总结.md  README.md
工作相关/HinYeung插件开发/: HYSDK计算质心.md  HinYeung插件开发指南.md  HinYeung机器人插件开发demo01.md  编译报错解决办法.md
工作相关/KUKA库卡机器人/: Kuka机器人-EtherNet包的使用.md  Kuka机器人插件的测试.md  Kuka机器人的专用术语.md  Kuka机器人的使用.md  Kuka机器人的使用中遇到的问题.md  Kuka机器人的编程.md  Kuka机器人的运行.md  READMEmd  WorkVisual使用教程.md
工作相关/KUKA库卡机器人/SERVER/: CONNECT.xml  SERVER.src
工作相关/KUKA库卡机器人/test4Move/: test4move.src
工作相关/KUKA库卡机器人/xmlcallback/: XmlCallBack.xml  xmlcallback.src
工作相关/KUKA库卡机器人/xmlfullconfig/: XmlFullConfig.xml
工作相关/KUKA库卡机器人/xmlserver/: XmlServer.src  XmlServer.xml
工作相关/KUKA库卡机器人/xmltransmit/: XmlTransmit.src  XmlTransmit.xml
工作相关/工具标定调研/: 工具标定的流程优化.md  工具标定的精度调研.md  工具标定调研.md
工作相关/扳手抓取/: 扳手抓取定位放置.md  扳手稳定抓取.md
工作相关/机器人与机器视觉入门/: 机器人与机器视觉入门.md
工作相关/机械臂和机器人插件的使用及二次开发/: 机械臂和机器人插件的使用及二次开发.md
工作相关/深度图的获取/: 如何使用Linux上的HYDeviceSDK获取深度图.html  如何使用Linux上的HYDeviceSDK获取深度图.md
工作相关/相机SDK的使用/: 相机SDK的使用.md
工作相关/自学部分/相机的控制/: 如何编程控制海康威视工业相机.md
工作相关/调研/: 视觉检测调研.md
工作相关/项目计划书/: 国家高新技术企业认证重点支持领域.md
机器视觉/OpenCV学习/opencv-demo/: CMakeLists.txt  main.cpp
(+1947 files in other folders)
